Changes made in Index and style

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         <section id="Intro">
 
             <h1> WELCOME TO FIRST IMPRESSION </h1>
+            <p1>Rating and Reviews of Movies and Shows</p1>
+            
+            
 
 
 
