Updated navbar and body section

--- a/index.html
+++ b/index.html
@@ -22,11 +22,18 @@
             <li class="item"><a href="webseries.html">Web Series</a></li>
             <li class="item"><a href="about.html">About Us</a></li>
             <li class="item"><a href="contact.html">Contact Us</a></li>
+            <li class="item"><a href="profile.html">Profile</a></li>
         </ul>
     </header>
 
     <!-- Body Section -->
-    <main class="main-section"></main>
+    <main class="main-section">
+
+        <div class="home-bg-img">
+            <!-- NOTE: an example how an image will look -->
+        </div>
+
+    </main>
 
     <!-- Footer Section -->
     <footer class="footer"></footer>
