--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Header Section -->
     <header class="header">
         <div id="w">
-            <img src="websiteLogo.png" alt="firstimpression" />
+            <img src="websiteLogo.png" height="80" width="80" alt="firstimpression" />
         </div>
         <ul>
             <li class="item"><a href="#">Home</a></li>
