--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 
     <!-- Header Section -->
     <header class="header">
-        <div id="w">
-            <img src="websiteLogo.png" height="80" width="80" alt="firstimpression" />
-        </div>
+        <img src="websiteLogo.png" class="head-img" alt="firstimpression" />
         <ul>
             <li class="item"><a href="#">Home</a></li>
             <li class="item"><a href="movies.html">Movies</a></li>
@@ -29,9 +27,7 @@
     <!-- Body Section -->
     <main class="main-section">
 
-        <div class="home-bg-img">
-            <!-- NOTE: an example how an image will look -->
-        </div>
+        <div class="home-bg-img"></div>
 
     </main>
 
