social media icon added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <br>
     <header class="header">
         <img src="websiteLogo.png" class="head-img" alt="firstimpression" />
-        <ul>
+        <ul id="navBar">
             <li class="item"><a href="#">Home</a></li>
             <li class="item"><a href="movies.html">Movies</a></li>
             <li class="item"><a href="webseries.html">Web Series</a></li>
@@ -272,8 +272,15 @@
 
 
     <footer class="footer">
-        <p>© 2020-2021 FirstImpression</p>
-
+        <p class="footerNote">© 2020-2021   ||    First Impression</p>
+        <br>
+        <section>
+            <ul id="footerLinks">
+                <li class="link"><a href="https://www.instagram.com/"><img src="instagram.png" alt="instagram" height="30px" width="30px"></a></li>
+                <li class="link"><a href="https://www.facebook.com/"><img src="facebook.png" alt="instagram" height="30px" width="30px"></a></li>
+                <li class="link"><a href="https://twitter.com/"><img src="Twitter.png" alt="instagram" height="30px" width="30px"></a></li>
+            </ul>
+        </section>
     </footer>
 
 </body>
