--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
             <li class="item"><a href="about.html">About Us</a></li>
             <li class="item"><a href="contact.html">Contact Us</a></li>
             <li class="item"><a href="profile.html">Profile</a></li>
+            <div class="searchContainer">
+                <form action="/link">
+                <input type="text" placeholder="type here to search" name="search">
+                <button type="submit"><img src="searchIcon.png" alt="searchButton" height="30px" width="30px"></button>
+                </form>
+            </div> 
         </ul>
     </header>
 
