--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="header">
         <img src="websiteLogo.png" class="head-img" alt="firstimpression" />
         <ul id="navBar">
-            <li class="item"><a href="#">Home</a></li>
+            <li class="item"><a href="index.html">Home</a></li>
             <li class="item"><a href="movies.html">Movies</a></li>
             <li class="item"><a href="webseries.html">Web Series</a></li>
             <li class="item"><a href="about.html">About Us</a></li>
