--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>First Impression</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Quicksand:wght@300&display=swap" rel="stylesheet">
@@ -25,9 +25,9 @@
             <li class="item"><a href="webseries.html">Web Series</a></li>
             <li class="item"><a href="about.html">About Us</a></li>
             <li class="item"><a href="contact.html">Contact Us</a></li>
-            <li class="item"><a href="profile.html">Profile</a></li>
+            <li class="item"><a href="profile.html" target="blank">Profile</a></li>
             <div class="searchContainer">
-                <form action="/link">
+                <form action="https://www.google.com/">     <!--should add server pointer to search -->
                 <input type="text" placeholder="type here to search" name="search">
                 <button type="submit"><img src="searchIcon.png" alt="searchButton" height="30px" width="30px"></button>
                 </form>
@@ -282,9 +282,9 @@
         <br>
         <section>
             <ul id="footerLinks">
-                <li class="link"><a href="https://www.instagram.com/"><img src="instagram.png" alt="instagram" height="30px" width="30px"></a></li>
-                <li class="link"><a href="https://www.facebook.com/"><img src="facebook.png" alt="instagram" height="30px" width="30px"></a></li>
-                <li class="link"><a href="https://twitter.com/"><img src="Twitter.png" alt="instagram" height="30px" width="30px"></a></li>
+                <li class="link"><a href="https://www.instagram.com/" target="blank"><img src="instagram.png" alt="instagram" height="30px" width="30px"></a></li>
+                <li class="link"><a href="https://www.facebook.com/" target="blank"><img src="facebook.png" alt="instagram" height="30px" width="30px"></a></li>
+                <li class="link"><a href="https://twitter.com/" target="blank"><img src="Twitter.png" alt="instagram" height="30px" width="30px"></a></li>
             </ul>
         </section>
     </footer>
