--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
             <div class="searchContainer">
                 <form action="https://www.google.com/">     <!--should add server pointer to search -->
                 <input type="text" placeholder="type here to search" name="search">
-                <button type="submit"><img src="searchIcon.png" alt="searchButton" class="SearchImg" height="30px" width="30px"><div class="hide">Search</div></button>
+                <button type="submit">
+                    <img src="searchIcon.png" alt="searchButton" class="SearchImg" height="30px" width="30px">
+                    <div class="hide">Search</div>
+                </button>
                 </form>
             </div> 
         </ul>
