few comment lines added

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <br>
     <header class="header">
         <img src="websiteLogo.png" class="head-img" alt="firstimpression" />
+        <!-- Navigation bar -->
         <ul id="navBar">
             <li class="item"><a href="index.html">Home</a></li>
             <li class="item"><a href="movies.html">Movies</a></li>
@@ -26,6 +27,7 @@
             <li class="item"><a href="about.html">About Us</a></li>
             <li class="item"><a href="contact.html">Contact Us</a></li>
             <li class="item"><a href="profile.html" target="blank">Profile</a></li>
+            <!-- search bar -->
             <div class="searchContainer">
                 <form action="https://www.google.com/">     <!--should add server pointer to search -->
                 <input type="text" placeholder="type here to search" name="search">
