few changes made

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         <img src="websiteLogo.png" class="head-img" alt="firstimpression" />
         <!-- Navigation bar -->
         <ul id="navBar">
-            <li class="item"><a href="index.html">Home</a></li>
-            <li class="item"><a href="movies.html">Movies</a></li>
-            <li class="item"><a href="webseries.html">Web Series</a></li>
-            <li class="item"><a href="about.html">About Us</a></li>
-            <li class="item"><a href="contact.html">Contact Us</a></li>
-            <li class="item"><a href="profile.html" target="blank">Profile</a></li>
+            <li class="item"><a class="aitems" href="index.html">Home</a></li>
+            <li class="item"><a class="aitems" href="movies.html">Movies</a></li>
+            <li class="item"><a class="aitems" href="webseries.html">Web Series</a></li>
+            <li class="item"><a class="aitems" href="about.html">About Us</a></li>
+            <li class="item"><a class="aitems" href="contact.html">Contact Us</a></li>
+            <li class="item"><a class="aitems" href="profile.html" target="blank">Profile</a></li>
             <!-- search bar -->
             <div class="searchContainer">
                 <form action="https://www.google.com/">     <!--should add server pointer to search -->
@@ -286,10 +286,15 @@
         <p class="footerNote">© 2020-2021   ||    First Impression</p>
         <br>
         <section>
+            <p class="footerText">Follow Us</p>
             <ul id="footerLinks">
-                <li class="link"><a href="https://www.instagram.com/" target="blank"><img src="instagram.png" alt="instagram" height="30px" width="30px"></a></li>
-                <li class="link"><a href="https://www.facebook.com/" target="blank"><img src="facebook.png" alt="instagram" height="30px" width="30px"></a></li>
-                <li class="link"><a href="https://twitter.com/" target="blank"><img src="Twitter.png" alt="instagram" height="30px" width="30px"></a></li>
+                <li><a class="aSlink" href="https://www.instagram.com/" target="blank"><img class="LinkImg" src="instagram.png" alt="instagram" ></a></li>
+                <li><a class="aSlink" href="https://www.facebook.com/" target="blank"><img class="LinkImg" src="facebook.png" alt="instagram" ></a></li>
+                <li><a class="aSlink" href="https://twitter.com/" target="blank"><img class="LinkImg" src="Twitter.png" alt="instagram" ></a></li>
+            </ul>
+            <ul id="privacy">
+                <li><a class="PrivacyLink" href="#" target="blank">Pivacy Policy</a></li>
+                <li><a class="PrivacyLink" href="#" target="blank">Terms & Conditions</a></li>
             </ul>
         </section>
     </footer>
