--- a/index.html
+++ b/index.html
@@ -287,15 +287,16 @@
         <br>
         <section>
             <p class="footerText">Follow Us</p>
+
             <ul id="footerLinks">
-                <li><a class="aSlink" href="https://www.instagram.com/" target="blank"><img class="LinkImg" src="instagram.png" alt="instagram" ></a></li>
-                <li><a class="aSlink" href="https://www.facebook.com/" target="blank"><img class="LinkImg" src="facebook.png" alt="instagram" ></a></li>
-                <li><a class="aSlink" href="https://twitter.com/" target="blank"><img class="LinkImg" src="Twitter.png" alt="instagram" ></a></li>
+                <li class="aSlink"><a href="https://www.instagram.com/" target="blank"><img class="LinkImg" src="instagram.png" alt="instagram"></a></li>
+                <li class="aSlink"><a href="https://www.facebook.com/" target="blank"><img class="LinkImg" src="facebook.png" alt="instagram"></a></li>
+                <li class="aSlink"><a href="https://twitter.com/" target="blank"><img class="LinkImg" src="Twitter.png" alt="instagram"></a></li>
+                
+                <li class="PrivacyLink"><a class="aPrivacy" href="#" target="blank">Pivacy Policy</a></li>
+                <li class="PrivacyLink"><a class="aPrivacy" href="#" target="blank">Terms & Conditions</a></li>
             </ul>
-            <ul id="privacy">
-                <li><a class="PrivacyLink" href="#" target="blank">Pivacy Policy</a></li>
-                <li><a class="PrivacyLink" href="#" target="blank">Terms & Conditions</a></li>
-            </ul>
+
         </section>
     </footer>
 
