changes made in movies file

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- Navigation bar -->
         <ul id="navBar">
             <li class="item"><a class="aitems" href="index.html">Home</a></li>
-            <li class="item"><a class="aitems" href="movies.html">Movies</a></li>
+            <li class="item"><a class="aitems" href="movies/movies.html">Movies</a></li>
             <li class="item"><a class="aitems" href="webseries.html">Web Series</a></li>
             <li class="item"><a class="aitems" href="about.html">About Us</a></li>
             <li class="item"><a class="aitems" href="contact.html">Contact Us</a></li>
