Web series page designed

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ul id="navBar">
             <li class="item"><a class="aitems" href="index.html">Home</a></li>
             <li class="item"><a class="aitems" href="movies/movies.html">Movies</a></li>
-            <li class="item"><a class="aitems" href="webseries.html">Web Series</a></li>
+            <li class="item"><a class="aitems" href="series/webseries.html">Web Series</a></li>
             <li class="item"><a class="aitems" href="about.html">About Us</a></li>
             <li class="item"><a class="aitems" href="contact.html">Contact Us</a></li>
             <li class="item"><a class="aitems" href="profile.html" target="blank">Profile</a></li>
