few CSS updated

--- a/series/webseries.html
+++ b/series/webseries.html
@@ -480,12 +480,12 @@
 
 
                 <div class="container" id="lang">
-                   <button type="submit" id="GenreLang" onclick="window.location.href='https://www.google.com'">Bengali</button>                
+                   <button type="submit" id="GenreLang" onclick="window.location.href='https://www.google.com'">বাংলা</button>                
                 </div>
 
 
                 <div class="container">
-                    <button type="submit" id="GenreLang" onclick="window.location.href='https://www.google.com'">Hindi</button>               
+                    <button type="submit" id="GenreLang" onclick="window.location.href='https://www.google.com'">हिंदी</button>               
                 </div>
 
 
