few buttons added

--- a/series/webseries.html
+++ b/series/webseries.html
@@ -423,44 +423,47 @@
 
             
 
-            <div id="MovieSectionSecond">
+            <div id="MovieSectionGenre">
 
 
-                <div class="container">
-                   <a class="genre" href="#">ACTION</a>                  
+                <div class="container" id="lang">
+                    <button type="submit" id="GenreLang" onclick="window.location.href='https://www.google.com'">ACTION</button>                
+                 </div>
+ 
+ 
+                 <div class="container">
+                     <button type="submit" id="GenreLang" onclick="window.location.href='https://www.google.com'">ADVENTURE</button>               
+                 </div>
+ 
+ 
+                 <div class="container">
+                     <button type="submit" id="GenreLang" onclick="window.location.href='https://www.google.com'">COMEDY</button>
+                 </div>
+
+                 <div class="container" id="lang">
+                    <button type="submit" id="GenreLang" onclick="window.location.href='https://www.google.com'">DRAMA</button>                
+                 </div>
+ 
+ 
+                 <div class="container">
+                     <button type="submit" id="GenreLang" onclick="window.location.href='https://www.google.com'">CRIME</button>               
+                 </div>
+ 
+ 
+                 <div class="container">
+                     <button type="submit" id="GenreLang" onclick="window.location.href='https://www.google.com'">ROMANCE</button>
+                 </div>
+
+                 <div class="container">
+                    <button type="submit" id="GenreLang" onclick="window.location.href='https://www.google.com'">ANIMATION</button>               
                 </div>
 
 
                 <div class="container">
-                    <a class="genre" href="#">ADVENTURE</a>                 
+                    <button type="submit" id="GenreLang" onclick="window.location.href='https://www.google.com'">HORROR</button>
                 </div>
 
 
-                <div class="container">
-                    <a class="genre" href="#">COMEDY</a>
-                </div>
-
-
-                <div class="container">
-                    <a class="genre" href="#">DRAMA</a>
-                </div>
-
-
-                <div class="container">
-                    <a class="genre" href="#">CRIME</a>
-                </div>
-
-                <div class="container">
-                    <a class="genre" href="#">ROMANCE</a>
-                </div>
-
-                <div class="container">
-                    <a class="genre" href="#">ANIMATION</a>
-                </div>
-
-                <div class="container">
-                    <a class="genre" href="#">HORROR</a>
-                </div>
             </div>
 
             
