few changes made

--- a/series/webseries.html
+++ b/series/webseries.html
@@ -3,8 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>First Impression</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no, maximum-scale=1">    <title>First Impression</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../movies/movies.css">
     <link rel="stylesheet" href="webseries.css">
@@ -58,7 +57,7 @@
                 <a class="Arrow" href="#"><i class="fa">&#xf053;</i></a>
 
                 <div class="container">
-                    <img src="movie1.jpg" alt="image" class="image1">
+                    <img src="../movie1.jpg" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9 </p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -66,7 +65,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="movie1.jpg" alt="image" class="image1">
+                    <img src="../movie1.jpg" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -74,7 +73,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="movie1.jpg" alt="image" class="image1">
+                    <img src="../movie1.jpg" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -83,7 +82,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="movie1.jpg" alt="image" class="image1">
+                    <img src="../movie1.jpg" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -92,7 +91,7 @@
 
 
                 <div class="container">
-                    <img src="movie1.jpg" alt="image" class="image1">
+                    <img src="../movie1.jpg" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -120,7 +119,7 @@
 
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -128,7 +127,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -136,7 +135,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -145,7 +144,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -154,7 +153,7 @@
 
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -182,7 +181,7 @@
 
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -190,7 +189,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -198,7 +197,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -207,7 +206,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -216,7 +215,7 @@
 
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -243,7 +242,7 @@
 
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -251,7 +250,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -259,7 +258,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -268,7 +267,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -277,7 +276,7 @@
 
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -304,7 +303,7 @@
 
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -312,7 +311,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -320,7 +319,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -329,7 +328,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -338,7 +337,7 @@
 
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -366,7 +365,7 @@
 
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -374,7 +373,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -382,7 +381,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -391,7 +390,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -400,7 +399,7 @@
 
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
