--- a/movies/movies.html
+++ b/movies/movies.html
@@ -3,8 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>First Impression</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no, maximum-scale=1">    <title>First Impression</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="movies.css">
     <link rel="stylesheet" href="../series/webseries.css">
@@ -57,7 +56,7 @@
                 <a class="Arrow" href="#"><i class="fa">&#xf053;</i></a>
 
                 <div class="container">
-                    <img src="movie1.jpg" alt="image" class="image1">
+                    <img src="../movie1.jpg" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9 </p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -65,7 +64,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="movie1.jpg" alt="image" class="image1">
+                    <img src="../movie1.jpg" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -73,7 +72,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="movie1.jpg" alt="image" class="image1">
+                    <img src="../movie1.jpg" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -82,7 +81,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="movie1.jpg" alt="image" class="image1">
+                    <img src="../movie1.jpg" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -91,7 +90,7 @@
 
 
                 <div class="container">
-                    <img src="movie1.jpg" alt="image" class="image1">
+                    <img src="../movie1.jpg" alt="image" class="image1">
                     <p class="p">FAST & FURIOUS 9</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -120,7 +119,7 @@
 
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -128,7 +127,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -136,7 +135,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -145,7 +144,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -154,7 +153,7 @@
 
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -180,7 +179,7 @@
 
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -188,7 +187,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -196,7 +195,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -205,7 +204,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
@@ -214,7 +213,7 @@
 
 
                 <div class="container">
-                    <img src="wseries2.jpg" alt="image" class="image1">
+                    <img src="../wseries2.jpg" alt="image" class="image1">
                     <p class="p">STRANGER THINGS</p>
                     <div class="middle">
                         <p class="text">4.5 Stars</p>
